i added something again

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </p>
         </div>
       </section>
-      <section class="bg-blue">
+      <section>
         <div class="container">
           <h1>Your own channel, a custom website for audio</h1>
           <p>
